[maven-release-plugin] prepare release 5.2.3
git-svn-id: https://svn.apache.org/repos/asf/tapestry/tapestry5/trunk@1034516 13f79535-47bb-0310-9956-ffa450edef68