@@ -4,7 +4,7 @@
   <groupId>org.apache.tapestry</groupId>
   <artifactId>tapestry-project</artifactId>
   <packaging>pom</packaging>
-  <version>5.2.3-SNAPSHOT</version>
+  <version>5.2.3</version>
   <name>Tapestry 5 Project</name>
   <description>Master project for the modules of Tapestry 5.</description>
   <inceptionYear>2006</inceptionYear>
@@ -30,9 +30,9 @@
     <url>http://www.apache.org</url>
   </organization>
   <scm>
-    <connection>scm:svn:https://svn.apache.org/repos/asf/tapestry/tapestry5/trunk/</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/tapestry/tapestry5/trunk/</developerConnection>
-    <url>http://svn.apache.org/viewvc/tapestry/tapestry5/trunk/</url>
+    <connection>scm:svn:https://svn.apache.org/repos/asf/tapestry/tapestry5/tags/releases/5.2.3</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/tapestry/tapestry5/tags/releases/5.2.3</developerConnection>
+    <url>http://svn.apache.org/viewvc/tapestry/tapestry5/tags/releases/5.2.3</url>
   </scm>
   <developers>
     <developer>
@@ -297,7 +297,7 @@
             <suiteXmlFiles>
               <suiteXmlFile>src/test/conf/testng.xml</suiteXmlFile>
             </suiteXmlFiles>
-            <argLine>-Xmx500m</argLine>
+            <argLine>-Xmx500m -XX:MaxPermSize=256m</argLine>
             <redirectTestOutputToFile>false</redirectTestOutputToFile>
           </configuration>
         </plugin>
